syntax = "proto3";

package protocol;

option java_package = "org.vision.protos.contract"; //Specify the name of the package that generated the Java file
//option java_outer_classname = "WitnessCreateContract"; //Specify the class name of the generated Java file

message WitnessCreateContract {
  bytes owner_address = 1;
  bytes url = 2;

  int64 type = 3;
  bytes rlp_data = 4;
}

message WitnessUpdateContract {
  bytes owner_address = 1;
  bytes update_url = 12;

  int64 type = 3;
  bytes rlp_data = 4;
}

message VoteWitnessContract {
  message Vote {
    bytes vote_address = 1;
    int64 vote_count = 2;
  }
  bytes owner_address = 1;
  repeated Vote votes = 2;
  bool support = 3;

  int64 type = 4;
  bytes rlp_data = 5;
}